tests/baselines/reference/emptyArgumentsListComment(strict=true).errors.txt
emptyArgumentsListComment.ts(1,13): error TS7005: Variable 'a' implicitly has an 'any' type.


==== emptyArgumentsListComment.ts (1 errors) ====
    declare var a;
                ~
!!! error TS7005: Variable 'a' implicitly has an 'any' type.
    
    a(/*1*/);
    a(
        /*first*/
        // foo
        /*middle*/
        // bar
        /*last*/
    );
    